--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/busboy": "^1.3.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/formidable": "^2.0.4",
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
+    "busboy": "^1.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express-session": "^1.17.2",
+    "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
